Fixed styling issues when favorites cards had different lengths of notes by including an align-content class with the cards' rows.

--- a/css/layout.css
+++ b/css/layout.css
@@ -76,3 +76,7 @@
   display: none;
   opacity: 0;
 }
+
+.align-start {
+  align-content: flex-start;
+}
